# giskard-oss

./: .dockerignore  AGENTS.md  AUTONOMOUS.md  CONTRIBUTING.md  README.md  THIRD_PARTY_NOTICES.md  railway.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: reset-safe-for-build-label.yml  zizmor.yml
apps/scan-ui/: README.md
apps/scan-ui/backend/: Dockerfile  pyproject.toml
apps/scan-ui/backend/app/: config.py  llm.py  main.py  scan_runner.py  store.py
apps/scan-ui/backend/static/: app.js  index.html  styles.css
libs/giskard-agents/src/giskard/agents/: workflow.py
libs/giskard-agents/src/giskard/agents/errors/: workflow_errors.py
libs/giskard-agents/tests/: test_workflow_output_parsing.py
libs/giskard-checks/: pyproject.toml
libs/giskard-checks/src/giskard/checks/: __init__.py  _telemetry_props.py
libs/giskard-checks/src/giskard/checks/builtin/: comparison.py
libs/giskard-checks/src/giskard/checks/core/: input_generator.py  result.py
libs/giskard-checks/src/giskard/checks/core/interaction/: interact.py
libs/giskard-checks/src/giskard/checks/export/: __init__.py  html.py  hub.py
libs/giskard-checks/src/giskard/checks/generators/: base.py
libs/giskard-checks/src/giskard/checks/prompts/generate_suite/: generation_rules.j2
libs/giskard-checks/src/giskard/checks/prompts/scenarios/: adversarial.j2  llm01_indirect_injection.j2
libs/giskard-checks/src/giskard/checks/scenarios/: __init__.py  runner.py  suite.py
libs/giskard-checks/src/giskard/checks/scenarios_generator/: adversarial_generator.py  base.py  catalog.py  prompt_injection.py  registry.py
libs/giskard-checks/src/giskard/checks/scenarios_generator/data/: prompt_injection.jsonl
libs/giskard-checks/tests/: testing_utils.py
libs/giskard-checks/tests/builtin/: test_answer_relevance.py  test_comparison.py  test_conformity.py  test_groundedness.py  test_toxicity.py
libs/giskard-checks/tests/core/: test_input_generator.py  test_input_type_inference.py  test_suite.py
libs/giskard-checks/tests/export/: test_html.py
libs/giskard-checks/tests/generators/: conftest.py  test_llm_generator.py
libs/giskard-checks/tests/scenarios_generator/: test_adversarial_generator.py  test_base.py  test_catalog.py  test_prompt_injection.py  test_registry.py
libs/giskard-llm/src/giskard/llm/: __init__.py
libs/giskard-scan/: THIRD_PARTY_NOTICES.md
libs/giskard-scan/src/giskard/scan/: vulnerability.py
notebooks/: 01_installation.ipynb
(+3 files in other folders)
