[project]
name = "giskard-checks"
version = "1.0.2b4"
description = "Add your description here"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "jsonpath-ng>=1.7.0,<2",
    "pydantic>=2.12,<3",
    "pydantic-settings>=2.7,<3",
    "giskard-agents>=1.0.2b2",
    "jinja2>=3.1.6,<4",
    "giskard-core>=1.0.1b3,<2",
    "jsonschema>=4.23.0,<5",
    "numpy>=2.4.1,<3",
    "regex>=2026.1.15",
    "rich>=14.2.0,<16",
]

[project.optional-dependencies]
readability = [
    "textstat>=0.7.0",
]
regorus = ["celine-regorus>=0.9.1; sys_platform != 'win32'"]
all = ["giskard-checks[regorus]"] # Install all optional dependencies

[tool.pytest.ini_options]
testpaths = ["tests", "src"]
addopts = "--doctest-modules"
asyncio_mode = "auto"
pythonpath = ["src"]
markers = [
    "integration: integration tests that are skipped unless --run-integration is provided",
]

[tool.ruff.lint]
select = ["E", "W", "I", "F"]
ignore = ["E501"]

[tool.ruff.lint.isort.sections]
"my_packages" = ["giskard"]

[tool.pyright]
failOnWarnings = false
typeCheckingMode = "recommended"
reportImportCycles = "warning"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/giskard"]

[tool.hatch.build.targets.sdist]
include = [
  "src/giskard/checks",
  "README.md",
  "pyproject.toml",
]
